src/components/Navigator/nav.css
:root{
    --nav-col: #F0F4F8;
    --nav-bg: #043d42;
    --nav-hov: #0000003d;
    --color-check: #043a3f;
}

nav{
    display: flex;
    padding: 0.72657rem;
    background-color: var(--nav-bg);
}

.navAll{
    display: flex;
    align-items: center;
    margin: 0;
    width: 100%;
    padding: 0;
}

a{
    text-decoration: none;
    color: var(--nav-col);
}

.liName{
    list-style: none;
    width: 100%;
    display: flex;
    justify-content: center;
    
}

.cantidad{
    background-color: var(--color-check);
    width: 20px;
    height: 20px;
    border-radius: 30px;
    color: var(--nav-col);
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 0.2rem;
    font-size: 0.7rem;
}

.titNav{
    font-size: 3.125rem;
    margin: 0;
    width: 100%;
    color: var(--nav-col);
    font-weight: 700;
    margin-left: 2rem;
}

.che{
    display: flex;
    align-items: center;
}

.moverNav{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

@media (max-width: 740px) {
    nav{
        flex-direction: column;
        position:sticky;
        width: 100%;
        z-index: 1;
        padding: 0.72657rem 0 ;
        top: 0;
    }
    .titNav{
        text-align: center;
        margin: 0;
    }
    .liName{
        text-align: center;
    }
}


.linkH{
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 30px;
    padding: 0.5rem;
    transition: 0.2s;
}
.linkH:hover{
    background-color: var(--nav-hov);
}

